<resources>
    <string name="app_name">pharma</string>
    <string name="pharmacy_management_system">PHARMACY MANAGEMENT SYSTEM</string>
    <string name="pharma">PHARMA</string>
    <string name="store">STORE</string>
    <string name="medicine">MEDICINE</string>
    <string name="button">Button</string>
    <string name="price">PRICE</string>
    <string name="quantity">QUANTITY</string>
    <string name="textview">TextView</string>
    <string name="profile">profile</string>
    <string name="update_profile">update profile</string>
    <string name="in_pharma">in pharma</string>
    <string name="pharmacy">pharmacy</string>
    <string name="delete_profile">delete profile</string>
    <string name="delete">delete</string>
    <string name="enter_name_for_delete">enter name for delete</string>
    <string name="name3">name</string>
    <string name="enter_price">enter price</string>
    <string name="enter_medicine_name">enter medicine name</string>
    <string name="enter_quantity">enter quantity</string>
    <string name="save">save</string>
    <string name="medicine_name">medicine name</string>
    <string name="update">update</string>
    <string name="enter_name_for_update">enter name for update</string>
    <string name="enter_price_for_update">enter price for update</string>
    <string name="name">name</string>
    <string name="show_stock">show stock</string>
    <string name="pstore">store</string>
    <string name="name1">name</string>
    <string name="data_display_here">data display here</string>
    <string name="medicine_name22">medicine name</string>
    <string name="medicine_price">medicine price</string>
    <string name="medicine_quantity">medicine quantity</string>
    <string name="enter_quantity3">enter quantity</string>
    <string name="enter_price3">enter price</string>
    <string name="medicine_name">medicine name</string>
</resources>
